--- a/python/numpy_ultraquick_tutorial.ipynb
+++ b/python/numpy_ultraquick_tutorial.ipynb
@@ -6,8 +6,7 @@
       "name": "NumPy UltraQuick Tutorial",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/raineydavid/22-day-coding-challenge/blob/master/python/numpy_ultraquick_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -127,10 +116,22 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "7UlFUnQg8605"
+      },
+      "source": [
+        "#@title Double-click to see how to import.\n",
+        "import numpy as np "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "guvPzSWYJGZ4"
       },
       "source": [
-        "import numpy as np "
+        "# write your code here"
       ],
       "execution_count": null,
       "outputs": []
@@ -149,11 +150,23 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "B0f7Rd159Hts"
+      },
+      "source": [
+        "#@title Double-click to see how to create a 1-d array\n",
+        "one_dimensional_array = np.array([1.2, 2.4, 3.5, 4.7, 6.1, 7.2, 8.3, 9.5])\n",
+        "print(one_dimensional_array)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "XxJR5xKpJbB3"
       },
       "source": [
-        "one_dimensional_array = np.array([1.2, 2.4, 3.5, 4.7, 6.1, 7.2, 8.3, 9.5])\n",
-        "print(one_dimensional_array)"
+        "# write your code here"
       ],
       "execution_count": null,
       "outputs": []
@@ -173,8 +186,20 @@
         "id": "_veGj18eMCDu"
       },
       "source": [
+        "#@title Double-click to see how to create a 2-d array\n",
         "two_dimensional_array = np.array([[6, 5], [11, 7], [4, 8]])\n",
         "print(two_dimensional_array)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z8gMRawF9XC4"
+      },
+      "source": [
+        "# write your code here"
       ],
       "execution_count": null,
       "outputs": []
@@ -187,6 +212,41 @@
       "source": [
         "To populate a matrix with all zeroes, call `np.zeros`. To populate a matrix with all ones, call `np.ones`."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yiOsVOWs7cu2"
+      },
+      "source": [
+        "#@title Double-click to see how to create a zero array with 2 elements\n",
+        "one_dimensional_zero_array = np.zeros(2)\n",
+        "print(one_dimensional_zero_array)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u-fcaEVC74f0"
+      },
+      "source": [
+        "two_dimensional_zero_array = np.zeros([6,5])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qVIwg___791P"
+      },
+      "source": [
+        "print(two_dimensional_zero_array)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -359,8 +419,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KjtIAYvMTPGl",
-        "cellView": "form"
+        "id": "ZnNGu-UM8SsW"
+      },
+      "source": [
+        "feature = np.arange(6,21)\n",
+        "print(feature)\n",
+        "label = 3 * feature +4\n",
+        "print(label)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KjtIAYvMTPGl"
       },
       "source": [
         "#@title Double-click to see a possible solution to Task 1.\n",
