update noise to dataset

--- a/python/numpy_ultraquick_tutorial.ipynb
+++ b/python/numpy_ultraquick_tutorial.ipynb
@@ -6,8 +6,7 @@
       "name": "NumPy UltraQuick Tutorial",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/raineydavid/22-day-coding-challenge/blob/master/python/numpy_ultraquick_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -240,10 +229,23 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "DvcZYR4--1ba"
+      },
+      "source": [
+        "# write your code here"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "u-fcaEVC74f0"
       },
       "source": [
-        "two_dimensional_zero_array = np.zeros([6,5])"
+        "#@title Double-click to see how to create a zero array with 6x5 elements\n",
+        "two_dimensional_zero_array = np.zeros([6,5])\n",
+        "print(two_dimensional_zero_array)"
       ],
       "execution_count": null,
       "outputs": []
@@ -254,7 +256,7 @@
         "id": "qVIwg___791P"
       },
       "source": [
-        "print(two_dimensional_zero_array)"
+        "# write your code here"
       ],
       "execution_count": null,
       "outputs": []
@@ -430,20 +432,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZnNGu-UM8SsW"
-      },
-      "source": [
-        "feature = np.arange(6,21)\n",
-        "print(feature)\n",
-        "label = 3 * feature +4\n",
-        "print(label)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "KjtIAYvMTPGl"
       },
       "source": [
@@ -486,8 +474,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7chgYKrC93np",
-        "cellView": "form"
+        "id": "7chgYKrC93np"
       },
       "source": [
         "#@title Double-click to see a possible solution to Task 2.\n",
